--- a/src/app/apply-laeave/apply-laeave.component.html
+++ b/src/app/apply-laeave/apply-laeave.component.html
@@ -8,9 +8,28 @@
   <input matInput placeholder="Enter employee id">
   </mat-form-field>
 
+  <mat-form-field  class="example-full-width" appearance="outline">
+    <mat-label>From date</mat-label>
+    <input matInput [matDatepicker]="picker">
+    <!-- <input matInput [matDatepicker]="picker"> -->
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+  <mat-form-field  class="example-full-width" appearance="outline">
+    <mat-label>To date</mat-label>
+    <!-- <input matInput [matDatepicker]="picker1"> -->
+    <input matInput [matDatepicker]="picker">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+  <mat-form-field  class="example-full-width" appearance="outline">
+    <mat-label>Reason For Leave</mat-label>
+    <textarea matInput placeholder="Reason for Leave"></textarea>
+  </mat-form-field>
 
-
-
-  
 </form>
+<div class="buttons">
+  <button mat-button color="primary">Apply</button>&nbsp;
+  <button routerLink="viewleave" mat-button color="accent">View</button>
+</div>
 </mat-card>
