--- a/src/app/apply-laeave/apply-laeave.component.html
+++ b/src/app/apply-laeave/apply-laeave.component.html
@@ -5,31 +5,30 @@
 <form class="example-form">
   <mat-form-field  class="example-full-width" appearance="outline">
   <mat-label>Employee Id</mat-label>
-  <input matInput placeholder="Enter employee id">
+  <input matInput name = "eid" [(ngModel)] ="leave.eid" placeholder="Enter employee id">
   </mat-form-field>
 
   <mat-form-field  class="example-full-width" appearance="outline">
     <mat-label>From date</mat-label>
-    <input matInput [matDatepicker]="picker">
+    <input matInput name="fromdate" [(ngModel)] = "leave.fromdate" [matDatepicker]="picker">
     <!-- <input matInput [matDatepicker]="picker"> -->
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
-  <mat-form-field  class="example-full-width" appearance="outline">
+  <!-- <mat-form-field  class="example-full-width" appearance="outline">
     <mat-label>To date</mat-label>
-    <!-- <input matInput [matDatepicker]="picker1"> -->
-    <input matInput [matDatepicker]="picker">
+    <input matInput name="todate" [(ngModel)] = "leave.todate"  [matDatepicker]="picker">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
-  </mat-form-field>
+  </mat-form-field> -->
   <mat-form-field  class="example-full-width" appearance="outline">
     <mat-label>Reason For Leave</mat-label>
-    <textarea matInput placeholder="Reason for Leave"></textarea>
+    <textarea  name="reason" [(ngModel)] = "leave.reason" matInput placeholder="Reason for Leave"></textarea>
   </mat-form-field>
 
 </form>
 <div class="buttons">
-  <button mat-button color="primary">Apply</button>&nbsp;
+  <button (click)="apply()" mat-button color="primary">Apply</button>&nbsp;
   <button routerLink="viewleave" mat-button color="accent">View</button>
 </div>
 </mat-card>
