--- a/src/app/update-component/update-component.component.html
+++ b/src/app/update-component/update-component.component.html
@@ -1,1 +1,35 @@
-<p>update-component works!</p>
+<mat-card class="example-card">
+  <mat-card-content>Update Leave</mat-card-content>
+
+
+<form class="example-form">
+  <mat-form-field  class="example-full-width" appearance="outline">
+  <mat-label>Employee Id</mat-label>
+  <input matInput [(ngModel)] = "leave.eid" name="eid" disabled placeholder="Enter employee id">
+  </mat-form-field>
+
+  <mat-form-field  class="example-full-width" appearance="outline">
+    <mat-label>From date</mat-label>
+    <input matInput [(ngModel)] = "leave.fromdate" name="fromdate" [matDatepicker]="picker">
+    <!-- <input matInput [matDatepicker]="picker"> -->
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+  <mat-form-field  class="example-full-width" appearance="outline">
+    <mat-label>To date</mat-label>
+    <!-- <input matInput [matDatepicker]="picker1"> -->
+    <input matInput [(ngModel)] = "leave.todate" [matDatepicker]="picker">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+  <mat-form-field  class="example-full-width" appearance="outline">
+    <mat-label>Reason For Leave</mat-label>
+    <textarea matInput [(ngModel)] = "leave.reason" name="reason" placeholder="Reason for Leave"></textarea>
+  </mat-form-field>
+
+</form>
+<div class="buttons">
+  <button (click) = "updatedata()" mat-button color="primary">Update</button>&nbsp;
+  <button routerLink="/viewleave" mat-button color="accent">Back</button>
+</div>
+</mat-card>
