--- a/src/app/view-leave/view-leave.component.html
+++ b/src/app/view-leave/view-leave.component.html
@@ -12,37 +12,37 @@
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
- 
+
   <ng-container matColumnDef="Emploee-id">
     <th mat-header-cell *matHeaderCellDef> E.id</th>
     <td mat-cell *matCellDef="let element"> {{element.eid}} </td>
   </ng-container>
 
 
-  <ng-container matColumnDef="Fromdate">
+  <ng-container matColumnDef="fromdate">
     <th mat-header-cell *matHeaderCellDef>Fromdate</th>
-    <td mat-cell *matCellDef="let element"> {{element.Fromdate}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.fromdate | date}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="Todate">
+  <ng-container matColumnDef="todate">
     <th mat-header-cell *matHeaderCellDef>Todate</th>
-    <td mat-cell *matCellDef="let element"> {{element.Todate}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.todate | date}} </td>
   </ng-container>
 
- 
-  <ng-container matColumnDef="Reason">
+
+  <ng-container matColumnDef="reason">
     <th mat-header-cell *matHeaderCellDef>Reason</th>
-    <td mat-cell *matCellDef="let element"> {{element.Reason}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.reason }} </td>
   </ng-container>
   <ng-container matColumnDef="Action">
     <th mat-header-cell *matHeaderCellDef>Action</th>
 
     <td mat-cell *matCellDef="let element">
       <button mat-icon-button color="primary">
-        <mat-icon>Edit</mat-icon>
+        <mat-icon routerLink="/updateleave{{element.id}}">Edit</mat-icon>
       </button>
       <button mat-icon-button color="warning">
-        <mat-icon>Delete</mat-icon>
+        <mat-icon (click) = "delete(element.id)">Delete</mat-icon>
       </button>
 
   </ng-container>
